the binder Dockerfile doesn't add module jdk.incubator.foreign